add max cache time to avoid no memory

--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -8,15 +8,19 @@ log_console=1
 log_debug=1
 notify_addr=127.0.0.1:9300
 
-cached_gop=1
+
 cached_memory=1024
 record_enable_pcr=1
 disk_io_threads=10
-timeout=5
 
+cached_gop=1
+#最大缓存的时间，单位毫秒
+max_video_cache_time=5000
+
+#网络超时时间单位秒
+timeout=5
 #最大发送数据包个数
 max_sends=2000
-
 #最大发送缓冲区 KB
 max_writting_bytes=1024
 
