添加流媒体服务器插件Demo

--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -1,6 +1,6 @@
 ﻿[mediasrv]
 
-#plugin=libmediasrv_plugin.so
+#plugin=libmediasrv-qtplugin-user.so
 log_level=error
 log_file=./log/mediasrv.log
 log_file_size=
@@ -68,9 +68,9 @@ hls_dir=/
 hls_ts_prefix=
 
 record_ts=0
-record_ts_dir=d:/video/
+record_ts_dir=/var/www/video/
 record_mp4=0
-record_mp4_dir=d:/video/
+record_mp4_dir=/var/www/video/
 
 memory_file=1
 output_hls=1
@@ -95,6 +95,8 @@ hls_ts_prefix=
 
 record_ts=0
 record_ts_dir=/var/www/video/
+record_mp4=0
+record_mp4_dir=/var/www/video/
 
 [rtmp1]
 enable_virtual_live=1
@@ -123,10 +125,9 @@ hls_dir=/
 hls_ts_prefix=
 
 record_ts=0
-record_ts_dir=
-
+record_ts_dir=/var/www/video/
 record_mp4=0
-record_mp4_dir=d:/video/
+record_mp4_dir=/var/www/video/
 [http0]
 network_threads=4
 enable=1
