--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -8,6 +8,10 @@ log_console=1
 log_debug=1
 notify_addr=127.0.0.1:9300
 
+# master cdn slave mixed
+#mode=slave
+#master_addr=192.168.1.9:2554
+
 
 cached_memory=1024
 record_enable_pcr=1
