--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -75,6 +75,8 @@ record_ts=0
 record_ts_dir=/var/www/video/
 record_mp4=0
 record_mp4_dir=/var/www/video/
+record_flv=0
+record_flv_dir=/var/www/video/
 
 memory_file=1
 output_hls=1
@@ -101,7 +103,8 @@ record_ts=0
 record_ts_dir=/var/www/video/
 record_mp4=0
 record_mp4_dir=/var/www/video/
-
+record_flv=0
+record_flv_dir=/var/www/video/
 [rtmp1]
 enable_virtual_live=1
 network_threads=4
@@ -132,6 +135,8 @@ record_ts=0
 record_ts_dir=/var/www/video/
 record_mp4=0
 record_mp4_dir=/var/www/video/
+record_flv=0
+record_flv_dir=/var/www/video/
 [http0]
 network_threads=4
 enable=1
