--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -62,6 +62,7 @@ enable_virtual_live=1
 network_threads=4
 enable=1
 bind_addr=
+bind_addr6=[*]
 port=2554
 publish=1
 playback=1
@@ -88,6 +89,7 @@ network_threads=4
 enable_rtmp=1
 enable_rtmpt=0
 bind_addr=
+bind_addr6=[*]
 port=1935
 publish=1
 playback=1
@@ -118,6 +120,7 @@ exclude_connections=1
 enable_rtmp=1
 enable_rtmpt=1
 bind_addr=
+bind_addr6=[*]
 port=2935
 publish=1
 playback=1
@@ -145,6 +148,7 @@ enable_flv=1
 enable_aac=1
 #绑定本地IP为录像提供视频流
 bind_addr=
+bind_addr6=[*]
 port=281
 [rtsp0]
 network_threads=4
@@ -154,6 +158,7 @@ enable_flv=1
 enable_aac=1
 #绑定本地IP为录像提供视频流
 bind_addr=
+bind_addr6=[*]
 port=554
 
 #强制打开rtsp回放，即使流媒体服务器不允许输出rtsp,如果使用NVR服务器录像，必须打开
@@ -165,6 +170,7 @@ network_threads=4
 enable=1
 #绑定本地IP为录像提供视频流
 bind_addr=
+bind_addr6=[*]
 port=1554
 
 #强制打开rtsp回放，即使流媒体服务器不允许输出rtsp,如果使用NVR服务器录像，必须打开
@@ -183,6 +189,7 @@ name_type=
 enable=1
 access_disk=1
 bind_addr=
+bind_addr6=[*]
 port=280
 www_root=/var/www/
 keepalive=1
