--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -1,7 +1,8 @@
 ﻿[mediasrv]
 
 #plugin=libmediasrv-qtplugin-user.so
-log_level=error
+#日志级别 FATAL ERROR WARNING INFO DEBUG  DETAIL
+log_level=WARNING
 log_file=./log/mediasrv.log
 log_file_size=
 log_console=1
