--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -1,25 +1,46 @@
-﻿[mediasrv]
+[mediasrv]
 
-#plugin=libmediasrv-qtplugin-user.so
 #日志级别 FATAL ERROR WARNING INFO DEBUG  DETAIL
-log_level=WARNING
-log_file=./log/mediasrv.log
+log_level=ERROR
+log_file=log/mediasrv.log
 log_file_size=
+#是否是输出信息到终端
 log_console=1
+#是否是输出调试信息
 log_debug=1
-notify_addr=127.0.0.1:9300
+
+
+callback_plugin=libluaplugin.so
+callback_enable=1
+
+#设置lua的脚本路径
+lua_file=mediasrv.lua
+
+#lua始终工作在多线程模式下
+#设成1 各个线程不能互相访问数据，对开发来说相当于单线程
+lua_stand_alone=0
 
 # master cdn slave mixed
-#mode=slave
-#master_addr=192.168.1.9:2554
+#设成cdn模式如果视频源不存在，会调用lua 中的 OnGetSourceStreamURL 读取源站地址
+#设成slave或者mixed模式如果视频源不存在，会从下面的 master_addr 读取源站地址
+#一般搭建IPTV使用 slave master 或者 mixed,搭建直播使用cdn模式
+mode=mixed
+#地址不要设成本机地址
+master_addr=192.168.1.6:2554
 
-
+#如果使用libmalloc2的缓存版本，该选项有效
 cached_memory=1024
+
 record_enable_pcr=1
+
+#MP4/FLV/TS录像 和HLS工作的线程
 disk_io_threads=10
 
+#是否缓存一组视频,打开该选项可使播放器快速打开视频
 cached_gop=1
-#最大缓存的时间，单位毫秒
+
+
+#视频最大缓存的时间，单位毫秒
 max_video_cache_time=5000
 
 #网络超时时间单位秒
@@ -27,9 +48,11 @@ timeout=5
 #最大发送数据包个数
 max_sends=2000
 #最大发送缓冲区 KB
-max_writting_bytes=1024
+max_writting_bytes=4096
 
-#数据发送线程
+#下面的线程设置根据机器配置情况调节
+
+#数据发送线程 为0会取CPU的核心数和8的最小值
 send_threads=0
 #每个数据发送线程的最大客户端数量
 max_clients_per_thread=500
@@ -38,57 +61,43 @@ max_clients_per_thread=500
 dataprocess_threads=5
 
 #网络事件处理线程
-networkevent_threads_httpd=5
-networkevent_threads_httpts=5
-networkevent_threads_rtmp=5
-networkevent_threads_ets=5
-networkevent_threads_rtsp=5
+networkevent_threads_httpd=2
+networkevent_threads_httpts=2
+networkevent_threads_rtmp=2
+networkevent_threads_ets=2
+networkevent_threads_rtsp=2
 [streamsrv_setting_port]
 #从streamsrv程序获取流配置的端口
 addr=127.0.0.1
 port=8500
-enable=1
 [mediasrv_configure_port]
 #streamsrv控制mediasrv的端口
 bind_addr=127.0.0.1
 port=8501
-enable=1
-[mediasrv_configure_http_port]
-#mediasrv http 输出信息
-bind_addr=127.0.0.1
-port=8580
-enable=1
+
 [ets0]
-enable_virtual_live=1
-network_threads=4
 enable=1
 bind_addr=
 bind_addr6=[*]
 port=2554
 publish=1
 playback=1
-use_setting_srv=1
+use_setting_srv=0
 memory_file=1
 output_hls=1
 hls_dir=/
 hls_ts_prefix=
 
+#是否录像可以在这里设置也可以通过lua控制
 record_ts=0
 record_ts_dir=/var/www/video/
 record_mp4=0
 record_mp4_dir=/var/www/video/
 record_flv=0
 record_flv_dir=/var/www/video/
-
-memory_file=1
-output_hls=1
-hls_dir=/
-hls_ts_prefix=
-
 [rtmp0]
-network_threads=4
 enable_rtmp=1
-enable_rtmpt=0
+enable_rtmpt=1
 bind_addr=
 bind_addr6=[*]
 port=1935
@@ -102,47 +111,17 @@ output_hls=1
 hls_dir=/
 hls_ts_prefix=
 
+#是否录像可以在这里设置也可以通过lua控制
 record_ts=0
 record_ts_dir=/var/www/video/
+
 record_mp4=0
 record_mp4_dir=/var/www/video/
+
 record_flv=0
 record_flv_dir=/var/www/video/
-[rtmp1]
-enable_virtual_live=1
-network_threads=4
-#内部推流使用
-enable=1
-#通过流媒体服务器获取设置  use_setting_srv=1
-use_setting_srv=1
-#强制打开rtmp回放，即使流媒体服务器 不允许输出RTMP
-force_playback=1
-exclude_connections=1
-enable_rtmp=1
-enable_rtmpt=1
-bind_addr=
-bind_addr6=[*]
-port=2935
-publish=1
-playback=1
-app=live
-chunksize=65535
 
-
-
-memory_file=1
-output_hls=1
-hls_dir=/
-hls_ts_prefix=
-
-record_ts=0
-record_ts_dir=/var/www/video/
-record_mp4=0
-record_mp4_dir=/var/www/video/
-record_flv=0
-record_flv_dir=/var/www/video/
 [http0]
-network_threads=4
 enable=1
 enable_ts=1
 enable_flv=1
@@ -152,7 +131,6 @@ bind_addr=
 bind_addr6=[*]
 port=281
 [rtsp0]
-network_threads=4
 enable=1
 enable_ts=1
 enable_flv=1
@@ -161,18 +139,6 @@ enable_aac=1
 bind_addr=
 bind_addr6=[*]
 port=554
-
-#强制打开rtsp回放，即使流媒体服务器不允许输出rtsp,如果使用NVR服务器录像，必须打开
-force_rtsp_play=1
-#强制打开http_ts回放，即使流媒体服务器不允许输出http_ts,如果使用录像服务器录像，必须打开
-force_http_ts_play=1
-[rtsp1]
-network_threads=4
-enable=1
-#绑定本地IP为录像提供视频流
-bind_addr=
-bind_addr6=[*]
-port=1554
 
 #强制打开rtsp回放，即使流媒体服务器不允许输出rtsp,如果使用NVR服务器录像，必须打开
 force_rtsp_play=1
@@ -197,37 +163,6 @@ keepalive=1
 [record]
 #每1800秒生成一个录像文件
 record_duration=1800
-record_type=nvr
-default_format=mp4
+record_type=session
 
-
-[database]
-host=127.0.0.1
-user=root
-pass=123456
-port=
-Database=live_vod
-mode=check-session
-[qtplugin-session]
-table_name=session
-field_video_session=idsession
-[qtplugin-check-session]
-table_name=session
-field_video_session=idsession
-field_video_online=online
-field_user_pwd=
-check_pwd=0
-md5_is_uppercase=0
-pwd_md5_count=1
-user_not_exist_delete_session=1
-[qtplugin-user]
-table_name=session
-field_video_session=idsession
-field_video_online=online
-field_user_id=user
-field_user_pwd=pwd
-check_pwd=1
-md5_is_uppercase=0
-pwd_md5_count=1
-user_not_exist_delete_session=1
 
