--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -66,6 +66,25 @@ networkevent_threads_httpts=2
 networkevent_threads_rtmp=2
 networkevent_threads_ets=2
 networkevent_threads_rtsp=2
+[cdn_server]
+#可以为每个节点起个名字 node_id
+node_id=test1
+#开启内置CDN调度，开启后lua的调度函数不再被执行
+enable=1
+#可同时设置3个cdn服务器 任意两台出现故障不影响服务
+#记得更改下面的 IP指向
+cdn_addr1=127.0.0.1 
+cdn_addr2=
+cdn_addr3=
+[cdn_net_interface]
+#CDN服务器默认调度规则：网卡负载超过50% 就会调度到下一个节点
+#CPU用量超过90%永远是在最低优先级
+#配置节点的 网卡名字 速率 外网IP
+#以下只是个demo
+1=eth1/30m/192.168.1.110
+2=Intel[R] Centrino[R] Advanced-N 6205/30m/192.168.1.110
+3=Qualcomm Atheros AR9485 Wireless Network Adapter/30m/192.168.1.110
+
 [streamsrv_setting_port]
 #从streamsrv程序获取流配置的端口
 addr=127.0.0.1
@@ -121,6 +140,37 @@ record_mp4_dir=/var/www/video/
 record_flv=0
 record_flv_dir=/var/www/video/
 
+[rtmp1]
+enable_virtual_live=1
+network_threads=0
+#内部推流使用
+enable=1
+#通过流媒体服务器获取设置  use_setting_srv=1
+use_setting_srv=1
+#强制打开rtmp回放，即使流媒体服务器 不允许输出RTMP
+force_playback=1
+
+enable_rtmp=1
+enable_rtmpt=0
+bind_addr=
+port=2935
+publish=1
+playback=1
+app=live
+chunksize=65535
+
+
+
+memory_file=1
+output_hls=1
+hls_dir=/
+hls_ts_prefix=
+
+record_ts=0
+record_ts_dir=
+
+record_mp4=0
+record_mp4_dir=d:/video/
 [http0]
 enable=1
 enable_ts=1
