--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -32,6 +32,7 @@ master_addr=192.168.1.6:2554
 cached_memory=1024
 
 record_enable_pcr=1
+ts_enable_sdt=0
 
 #MP4/FLV/TS录像 和HLS工作的线程
 disk_io_threads=10
