--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -31,8 +31,17 @@ master_addr=192.168.1.6:2554
 #如果使用libmalloc2的缓存版本，该选项有效
 cached_memory=1024
 
-record_enable_pcr=1
+delayclose_virtual_live_seconds=10
+
+ts_record_pcr_video=1
+ts_hls_pcr_video=1
+ts_http_pcr_video=1
+ts_enable_text=0
 ts_enable_sdt=0
+ts_force_video_audio=1
+
+#flash player推送等待时间 秒
+flash_interactive_time=60
 
 #MP4/FLV/TS录像 和HLS工作的线程
 disk_io_threads=10
@@ -80,11 +89,11 @@ cdn_addr3=
 [cdn_net_interface]
 #CDN服务器默认调度规则：网卡负载超过50% 就会调度到下一个节点
 #CPU用量超过90%永远是在最低优先级
-#配置节点的 网卡名字 速率 外网IP
+#配置节点的 网卡名字 速率 外网IP 类型(可以不设置)
 #以下只是个demo
-1=eth1/30m/192.168.1.110
-2=Intel[R] Centrino[R] Advanced-N 6205/30m/192.168.1.110
-3=Qualcomm Atheros AR9485 Wireless Network Adapter/30m/192.168.1.110
+1=eth1/30m/192.168.1.110/pull
+2=Intel[R] Centrino[R] Advanced-N 6205/30m/192.168.1.110/push
+3=Qualcomm Atheros AR9485 Wireless Network Adapter/30m/192.168.1.110/push
 
 [streamsrv_setting_port]
 #从streamsrv程序获取流配置的端口
