--- a/cdn/cdnsrv.ini
+++ b/cdn/cdnsrv.ini
@@ -1,6 +1,6 @@
 [cdnsrv]
 
-log_level=err
+log_level=info
 log_file=./log/cdnsrv.log
 log_file_size=
 log_console=1
@@ -27,7 +27,7 @@ max_cpu=90
 [httpapi0]
 bind_addr=*
 bind_addr6=*
-port=380
+port=80
 enable=1
 network_threads=0
 [cdnnet0]
