--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -24,7 +24,7 @@ lua_stand_alone=0
 #设成cdn模式如果视频源不存在，会调用lua 中的 OnGetSourceStreamURL 读取源站地址
 #设成slave或者mixed模式如果视频源不存在，会从下面的 master_addr 读取源站地址
 #一般搭建IPTV使用 slave master 或者 mixed,搭建直播使用cdn模式
-mode=mixed
+mode=cdn
 #地址不要设成本机地址
 master_addr=192.168.1.6:2554
 
@@ -80,7 +80,7 @@ networkevent_threads_rtsp=2
 #可以为每个节点起个名字 node_id
 node_id=test1
 #开启内置CDN调度，开启后lua的调度函数不再被执行
-enable=0
+enable=1
 #可同时设置3个cdn服务器 任意两台出现故障不影响服务
 #记得更改下面的 IP指向
 cdn_addr1=127.0.0.1 
@@ -91,7 +91,7 @@ cdn_addr3=
 #CPU用量超过90%永远是在最低优先级
 #配置节点的 网卡名字 速率 外网IP 类型(可以不设置)
 #以下只是个demo
-1=eth1/30m/192.168.1.110/pull
+1=eth0/30m/192.168.1.110/pull
 2=Intel[R] Centrino[R] Advanced-N 6205/30m/192.168.1.110/push
 3=Qualcomm Atheros AR9485 Wireless Network Adapter/30m/192.168.1.110/push
 
