--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -1,7 +1,7 @@
 [mediasrv]
 
 #日志级别 FATAL ERROR WARNING INFO DEBUG  DETAIL
-log_level=ERROR
+log_level=DETAIL
 log_file=log/mediasrv.log
 log_file_size=
 #是否是输出信息到终端
@@ -24,7 +24,7 @@ lua_stand_alone=0
 #设成cdn模式如果视频源不存在，会调用lua 中的 OnGetSourceStreamURL 读取源站地址
 #设成slave或者mixed模式如果视频源不存在，会从下面的 master_addr 读取源站地址
 #一般搭建IPTV使用 slave master 或者 mixed,搭建直播使用cdn模式
-mode=cdn
+mode=master
 #地址不要设成本机地址
 master_addr=192.168.1.6:2554
 
@@ -80,7 +80,7 @@ networkevent_threads_rtsp=2
 #可以为每个节点起个名字 node_id
 node_id=test1
 #开启内置CDN调度，开启后lua的调度函数不再被执行
-enable=1
+enable=0
 #可同时设置3个cdn服务器 任意两台出现故障不影响服务
 #记得更改下面的 IP指向
 cdn_addr1=127.0.0.1 
