--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -8,7 +8,8 @@ log_file_size=
 log_console=1
 #是否是输出调试信息
 log_debug=1
-
+#最大发送缓冲区 KB
+max_writting_bytes=4096
 [streamsrv_setting_port]
 #从streamsrv程序获取流配置的端口
 addr=127.0.0.1
