--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -20,6 +20,14 @@ bind_addr=127.0.0.1
 port=8501
 
 
+[rtsp0]
+enable=1
+enable_ts=1
+#绑定本地IP为录像提供视频流
+bind_addr=
+bind_addr6=[*]
+port=554
+
 [rtmp0]
 enable_rtmp=1
 enable_rtmpt=1
