--- a/bin/mediasrv.ini
+++ b/bin/mediasrv.ini
@@ -10,6 +10,14 @@ log_console=1
 log_debug=1
 #最大发送缓冲区 KB
 max_writting_bytes=4096
+
+mode=master
+
+callback_plugin=libluaplugin.so
+callback_enable=1
+
+#设置lua的脚本路径
+lua_file=mediasrv.lua
 [streamsrv_setting_port]
 #从streamsrv程序获取流配置的端口
 addr=127.0.0.1
